# ChatnLearn

./: .env.example  .gitignore  PROJECT_PROGRESS.md  QUICK_START.md  VERSION_INFO.md  VIDEO_READY.md  nixpacks-v4.toml  nixpacks.toml  railway.json  vercel.json
backend/: bot.py  bot_interview.py  requirements.txt  server.py
backend/venv311/: pyvenv.cfg
backend/venv311/Scripts/: activate  activate.bat  numba
frontend/: chat.html  chat_mode.html  index.html  interview_realtime.html  video.html
v1/: README.md
v1/backend/: .gitignore  bot_interview.py  bot_simple.py  pyproject.toml
v1/frontend/: chat_mode.html  config.js  info_gather.html  video_mode.html
v3/: WHY_V3.md
v3/backend/: .gitignore  bot.py
v4/: .gitignore  Dockerfile  nixpacks.toml  pcc-deploy.toml  pyproject.toml  railway.json  server.py
v4/frontend/: index.html  interview.html
v4/v1/backend/: .env.example  bot_simple.py  requirements.txt
v4/v1/frontend/: chat_mode.html  index.html  video_mode.html
v4/v3/: README.md
v4/v3/backend/: .env.example  requirements.txt  setup.ps1
